--- a/Code/Algorithms/Books/AlgorithmsForInterviews/08_design-problems.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/08_design-problems.yml
@@ -228,3 +228,17 @@ notes:
       Devise a protocol by which hosts can elect a unique leader from all the hosts participating in the protocol. The protocol should be fast, in that it converges quickly; it should be efficient, in that it should not involve too many connections, too many data exchanges, or too much data exchanged.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 72.
+
+
+- fields:
+    Front: |
+      ## 08.17: Host discovery
+
+      You are to devise a protocol by which a collection of hosts on the Internet can discover each other. Hosts can communicate with each other using TCP connections. For host \\(A\\) to communicate with host \\(B\\), it needs to know \\(B\\)'s IP address.
+
+      Each host starts off with a set of IP addresses and the protocol code that you implement that will run on a fixed port across all the hosts.
+
+      Devise a protocol by which hosts can discover all the hosts participating in the protocol.
+      The protocol should be fast; it should be efficient, in that it should not involve too many connections, too many data exchanges, or too much data exchanged.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 72.
