Add tag 09a to AFI 09a

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/09a_discrete-mathematics_general.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/09a_discrete-mathematics_general.yml
@@ -7,6 +7,7 @@ defaults:
   - Books
   - AlgorithmsForInterviews
   - 09-DiscreteMathematics
+  - 09a-General
 
   fields:
     Python: "**To-do: Python.**"
