--- a/Code/Algorithms/Books/AlgorithmsForInterviews/09b_discrete-mathematics_invariants.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/09b_discrete-mathematics_invariants.yml
@@ -112,3 +112,14 @@ notes:
       If you want to ensure you do not lose, would you rather be \\(F\\) or \\(S\\)?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 78.
+
+
+- fields:
+    Front: |
+      ## 09.15: Picking up coins --- II
+
+      There are fifty coins in a line --- these could be pennies, nickels, dimes, or quarters. Two players, \\(F\\) and \\(S\\), take turns at choosing one coin each --- they can only choose from the two coins at the ends of the line. The game ends when all the coins have been picked up. The player whose coins have the higher total value wins. Each player must select a coin when it is his turn, so the game ends in fifty turns.
+
+      Derive an efficient algorithm for computing the maximum amount of money \\(F\\) can win.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 78.
