--- a/Code/Algorithms/Books/AlgorithmsForInterviews/10_probability.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/10_probability.yml
@@ -1,12 +1,12 @@
 defaults:
   deckName: Staging
-  modelName: BasicMathJax
+  modelName: CodingProblems
   tags:
   - Code
   - Algorithms
   - Books
   - AlgorithmsForInterviews
-  - 10-Probability
+  - 10-Probabilit0y
 
   fields:
     Python: "**To-do: Python.**"
@@ -18,3 +18,13 @@ defaults:
 
 
 notes:
+
+- fields:
+    Front: |
+      ## 10.01: Offline sampling
+
+      Let \\(A\\) be an array of \\(n\\) distinct elements. We want to compute a random subset of \\(k\\) elements.
+
+      Design an algorithm that returns a subset of \\(k\\) elements; all subsets should be equally likely. Use as few calls to the random number generator as possible and use only \\(O(1)\\) additional storage. (You can return the result in the same array as input.)
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 81.
