Add AFI problem 10.14

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/10_probability.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/10_probability.yml
@@ -170,3 +170,13 @@ notes:
       Show there is a unique arbitrage-free price for the option and compute this price.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 85.
+
+
+- modelName: BasicMathJax
+  fields:
+    Front: |
+      ## 10.14: Option pricing --- continuous case
+
+      Suppose the price of Jingle stock 100 days in the future is a normal random variable with mean $300 and deviation $20. What would be the fair price of an option to buy a single share of Jingle at $300 in 100 days worth today? (Ignore the impact of interest rates.)
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 85.
